--- a/docs/assets/css/more.css
+++ b/docs/assets/css/more.css
@@ -8,7 +8,7 @@
     height: 18px;
 }
 .icon-left1 img {
-    margin-left:100px;
+    margin-left:px;
     margin-right: 4px;
     margin-bottom: -2px;
     width: 150px;
@@ -17,7 +17,7 @@
 }
 
 .icon-left2 img {
-    margin-left:60px;
+    margin-left:6px;
     margin-right: 4px;
     margin-bottom: -2px;
     width: 150px;
@@ -35,7 +35,7 @@
 }
 
 .icon-left4 img {
-    margin-left:100px;
+    margin-left:5px;
     margin-right: 4px;
     margin-bottom: -2px;
     width: 225x;
@@ -63,7 +63,7 @@
 }
 
 .icon-left7 img {
-    margin-left:100px;
+    margin-left:5px;
     margin-right: 4px;
     margin-bottom: -2px;
     width: 370x;
