--- a/docs/assets/css/more.css
+++ b/docs/assets/css/more.css
@@ -8,7 +8,7 @@
     height: 18px;
 }
 .icon-left1 img {
-    margin-left:px;
+    margin-left:5px;
     margin-right: 4px;
     margin-bottom: -2px;
     width: 150px;
