--- a/docs/assets/css/more.css
+++ b/docs/assets/css/more.css
@@ -47,6 +47,14 @@
     margin-left:5px;
     margin-right: 4px;
     margin-bottom: -2px;
+    width: 410px;
+    height: 404px;
+
+}
+.icon-left5i img {
+    margin-left:5px;
+    margin-right: 4px;
+    margin-bottom: -2px;
     width: 479x;
     height: 466px;
 
